- Display docs with a more natural size - Fix word wrapping for docs

--- a/src/app/Components/docs/docs-content/docs-content.component.scss
+++ b/src/app/Components/docs/docs-content/docs-content.component.scss
@@ -50,16 +50,21 @@ h3 {
     .content {
         flex-grow: 1;
         display: flex;
-        overflow-y: hidden;
+        overflow-y: scroll;
+        height: 100%;
 
         .content-view {
             flex: 1;
+            max-width: 900px;
+            margin: auto;
         }
 
         .content-editor {
             flex: 1;
             display: flex;
             flex-direction: column;
+            max-width: 900px;
+            margin: auto;
         }
     }
 }
